# stackman

./: .gitignore  .prettierignore  README.md  bors.toml  flake.nix  package-lock.json  package.json  tsconfig.json  wmr.config.mjs
.github/workflows/: build-image.yml  docker-image.yml
prototype/: index.html  sw.js
public/: index.html  index.tsx  style.css
src/components/: Album.module.css  Album.tsx  AlbumCard.module.css  AlbumCard.tsx  App.module.css  App.tsx  Info.tsx  Library.module.css  Library.tsx  NowPlaying.module.css  NowPlaying.tsx  Player.module.css  Player.tsx  Select.module.css  Select.tsx  Track.module.css  Track.tsx
src/hooks/: useSpring.ts
src/utils/: classnames.ts  convertSecondsToLength.ts
stackman-api/: Cargo.toml  default.nix
stackman-api/src/: main.rs
stackman-ui/: .prettierrc.json  default.nix  package-lock.json  package.json  tsconfig.json  wmr.config.mjs
stackman-ui-prototype/: default.nix  index.html
stackman-ui/public/: index.html  index.tsx
stackman-ui/src/api/: index.ts  types.ts
stackman-ui/src/components/: Album.tsx  AlbumCard.module.css  AlbumCard.tsx  App.tsx  Info.module.css  Info.tsx  Library.module.css  Library.tsx  NowPlaying.tsx  Player.tsx  Select.tsx  Track.tsx
stackman-ui/src/hooks/: useSpring.ts
stackman-ui/src/utils/: renderTime.ts
