[package]
name = "stackman-api-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bytes = "1.3"
clap = { version = "4.1", features = ["derive"] }
regex = "1.7"
rouille = "3.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.2", features = ["v4", "serde"] }
